Profile Details Bug Fix Files modified - [MunicipalityUsers.html,MyProfile.variables.json,app.variables.json,servicedef.xml]

--- a/src/main/webapp/pages/MunicipalityUsers/MunicipalityUsers.html
+++ b/src/main/webapp/pages/MunicipalityUsers/MunicipalityUsers.html
@@ -166,8 +166,8 @@
                     </wm-gridcolumn>
                     <wm-gridcolumn columnwidth="4" name="gridcolumn23"></wm-gridcolumn>
                     <wm-gridcolumn columnwidth="6" name="gridcolumn24" padding="unset unset 1em unset">
-                        <wm-label padding="unset 0.5em 0.5em 0.5em" fontweight="bold" width="100%" caption="State" name="label16"></wm-label>
-                        <wm-label padding="unset 0.5em" caption="bind:Widgets.gridUsersubscriptionsList.selecteditem.users.city" name="label19"></wm-label>
+                        <wm-label padding="unset 0.5em 0.5em 0.5em" fontweight="bold" width="100%" caption="Country" name="label16"></wm-label>
+                        <wm-label padding="unset 0.5em" caption="bind:Widgets.gridUsersubscriptionsList.selecteditem.users.country" name="label19"></wm-label>
                     </wm-gridcolumn>
                 </wm-gridrow>
                 <wm-gridrow name="gridrow11">
@@ -285,8 +285,8 @@
                     </wm-gridcolumn>
                     <wm-gridcolumn columnwidth="4" name="gridcolumn62"></wm-gridcolumn>
                     <wm-gridcolumn columnwidth="6" padding="unset unset 1em unset" name="gridcolumn63">
-                        <wm-label padding="unset 0.5em 0.5em 0.5em" fontweight="bold" width="100%" caption="State" name="label42"></wm-label>
-                        <wm-label padding="unset 0.5em" caption="bind:Widgets.gridEmployees.selecteditem.City" name="label43"></wm-label>
+                        <wm-label padding="unset 0.5em 0.5em 0.5em" fontweight="bold" width="100%" caption="Country" name="label42"></wm-label>
+                        <wm-label padding="unset 0.5em" caption="bind:Widgets.gridEmployees.selecteditem.Country" name="label43"></wm-label>
                     </wm-gridcolumn>
                 </wm-gridrow>
                 <wm-gridrow name="gridrow31">
@@ -374,8 +374,8 @@
                     </wm-gridcolumn>
                     <wm-gridcolumn columnwidth="4" name="gridcolumn62_1"></wm-gridcolumn>
                     <wm-gridcolumn columnwidth="6" padding="unset unset 1em unset" name="gridcolumn63_1">
-                        <wm-label padding="unset 0.5em 0.5em 0.5em" fontweight="bold" width="100%" caption="State" name="label43_1"></wm-label>
-                        <wm-label padding="unset 0.5em" caption="bind:Widgets.gridAdmin.selecteditem.City" name="label44_1"></wm-label>
+                        <wm-label padding="unset 0.5em 0.5em 0.5em" fontweight="bold" width="100%" caption="Country" name="label43_1"></wm-label>
+                        <wm-label padding="unset 0.5em" caption="bind:Widgets.gridAdmin.selecteditem.Country" name="label44_1"></wm-label>
                     </wm-gridcolumn>
                 </wm-gridrow>
                 <wm-gridrow name="gridrow32">
