New Municipality modal- Time Zone field Files modified - [MunicipalitySettings.variables.json,ManageMunicipalities.html,WorkSchedule.variables.json]

--- a/src/main/webapp/pages/ManageMunicipalities/ManageMunicipalities.html
+++ b/src/main/webapp/pages/ManageMunicipalities/ManageMunicipalities.html
@@ -118,7 +118,7 @@
                                     <wm-gridrow name="gridrow4">
                                         <wm-gridcolumn name="gridcolumn7" columnwidth="6">
                                             <wm-form-field name="timeZone" displayname="Time Zone" show="true" primary-key="false" generator="assigned" key="timeZone" type="string" widget="select" maxchars="255" inputtype="text" placeholder="Enter value"
-                                            dataset="EST, CST, MST, PST" defaultvalue="EST"></wm-form-field>
+                                            dataset="Eastern,Central,Mountain,Pacific" defaultvalue="EST"></wm-form-field>
                                         </wm-gridcolumn>
                                         <wm-gridcolumn name="gridcolumn8" columnwidth="6">
                                             <wm-form-field name="openTime" displayname="Open Time" show="true" primary-key="false" generator="assigned" key="openTime" type="time" widget="time" placeholder="Select time" outputformat="HH:mm:ss"></wm-form-field>
